--- a/nginx.conf
+++ b/nginx.conf
@@ -5,14 +5,27 @@ events {
 }
 
 http {
-    # Настройка для перенаправления HTTP на HTTPS (удалено)
+    # Настройка для перенаправления HTTP на HTTPS
     server {
         listen       80;
-        server_name  77.105.174.251; # Укажите ваш IP-адрес
+        server_name  dicecalc.ru; # Укажите ваш поддомен
 
-        # Перенаправление всех HTTP-запросов на HTTPS (удалено)
-        # return 301 https://$host$request_uri;
-        
+        # Перенаправление всех HTTP-запросов на HTTPS
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen       443 ssl;
+        server_name  dicecalc.ru; # Укажите ваш поддомен
+
+        # Путь к SSL-сертификатам
+        ssl_certificate /etc/letsencrypt/live/dicecalc.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/dicecalc.ru/privkey.pem;
+
+        # Дополнительные настройки SSL (рекомендуется)
+        ssl_protocols       TLSv1.2 TLSv1.3;
+        ssl_ciphers         HIGH:!aNULL:!MD5;
+
         location / {
             proxy_pass http://frontend:3000/; # Прокси на ваше приложение
             proxy_http_version 1.1;
@@ -21,7 +34,6 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
-        
         location /api/ {
             proxy_pass http://backend:8000/;
         }
