--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - "443:443"
     volumes:
       - './nginx.conf:/etc/nginx/nginx.conf'
-      - /etc/letsencrypt/live/zakupkiru.firecalculation.ru/fullchain.pem:/etc/letsencrypt/live/zakupkiru.firecalculation.ru/fullchain.pem
-      - /etc/letsencrypt/live/zakupkiru.firecalculation.ru/privkey.pem:/etc/letsencrypt/live/zakupkiru.firecalculation.ru/privkey.pem
+      - /etc/letsencrypt/live/dicecalc.ru/fullchain.pem:/etc/letsencrypt/live/dicecalc.ru/fullchain.pem
+      - /etc/letsencrypt/live/dicecalc.ru/privkey.pem:/etc/letsencrypt/live/dicecalc.ru/privkey.pem
       - ./:/var/www/html
     networks:
       - dev
