--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,8 @@ http {
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
 
+        client_max_body_size 100M;  # Установите нужный размер
+
         location / {
             proxy_pass http://frontend:3000/; # Прокси на ваше приложение
             proxy_http_version 1.1;
