--- a/nginx.conf
+++ b/nginx.conf
@@ -28,6 +28,11 @@ http {
 
         client_max_body_size 100M;  # Установите нужный размер
 
+        # Increase timeout settings
+        proxy_connect_timeout 600s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
+
         location / {
             proxy_pass http://frontend:3000/; # Прокси на ваше приложение
             proxy_http_version 1.1;
